--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,40 +7,19 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:orientation="vertical"
+    android:gravity="center"
     tools:context=".MainActivity">
 
-    <android.support.v4.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone">
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="自定义behavior"
+        android:onClick="onClickCustomBehavior"/>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="头部滑动"
+        android:onClick="onClickCollapsing"/>
 
-            <TextView
-                style="@style/TextAppearance.AppCompat.Display3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="128dp"
-                android:background="@android:color/holo_red_light"
-                android:text="A\nB\nC\nD\nE\nF\nG\nH\nI\nJ\nK\nL\nM\nN\nO\nP\nQ\nR\nS\nT\nU\nV\nW\nX\nY\nZ"/>
-
-        </LinearLayout>
-    </android.support.v4.widget.NestedScrollView>
-
-    <View
-        android:id="@+id/first"
-        android:layout_width="match_parent"
-        android:layout_height="128dp"
-        android:background="@android:color/holo_blue_light"/>
-
-    <View
-        android:id="@+id/second"
-        android:layout_width="match_parent"
-        android:layout_height="128dp"
-        android:background="@android:color/holo_green_light"
-        app:layout_behavior=".ScrollToTopBehavior"/>
-
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
